lib/parser/generatedParser.js
/**
 * Generated Parser
 *
 * Parse the input code.
 */
'use strict';

var generatedParser = module.exports = (function(){
  /*
   * Generated by PEG.js 0.7.0.
   *
   * http://pegjs.majda.cz/
   */
  
  function subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }
  
  function quote(s) {
    /*
     * ECMA-262, 5th ed., 7.8.4: All characters may appear literally in a
     * string literal except for the closing quote character, backslash,
     * carriage return, line separator, paragraph separator, and line feed.
     * Any character may appear in the form of an escape sequence.
     *
     * For portability, we also escape escape all control and non-ASCII
     * characters. Note that "\0" and "\v" escape sequences are not used
     * because JSHint does not like the first and IE the second.
     */
     return '"' + s
      .replace(/\\/g, '\\\\')  // backslash
      .replace(/"/g, '\\"')    // closing quote character
      .replace(/\x08/g, '\\b') // backspace
      .replace(/\t/g, '\\t')   // horizontal tab
      .replace(/\n/g, '\\n')   // line feed
      .replace(/\f/g, '\\f')   // form feed
      .replace(/\r/g, '\\r')   // carriage return
      .replace(/[\x00-\x07\x0B\x0E-\x1F\x80-\uFFFF]/g, escape)
      + '"';
  }
  
  var result = {
    /*
     * Parses the input with a generated parser. If the parsing is successful,
     * returns a value explicitly or implicitly specified by the grammar from
     * which the parser was generated (see |PEG.buildParser|). If the parsing is
     * unsuccessful, throws |PEG.parser.SyntaxError| describing the error.
     */
    parse: function(input) {
      var parseFunctions = {
        "root": parse_root,
        "selector": parse_selector,
        "mediaQuery": parse_mediaQuery
      };
      
      var options = arguments.length > 1 ? arguments[1] : {},
          startRule;
      
      if (options.startRule !== undefined) {
        startRule = options.startRule;
        
        if (parseFunctions[startRule] === undefined) {
          throw new Error("Can't start parsing from rule " + quote(startRule) + ".");
        }
      } else {
        startRule = "root";
      }
      
      var pos = 0;
      var reportedPos = 0;
      var cachedReportedPos = 0;
      var cachedReportedPosDetails = { line: 1, column: 1, seenCR: false };
      var reportFailures = 0;
      var rightmostFailuresPos = 0;
      var rightmostFailuresExpected = [];
      
      function padLeft(input, padding, length) {
        var result = input;
        
        var padLength = length - input.length;
        for (var i = 0; i < padLength; i++) {
          result = padding + result;
        }
        
        return result;
      }
      
      function escape(ch) {
        var charCode = ch.charCodeAt(0);
        var escapeChar;
        var length;
        
        if (charCode <= 0xFF) {
          escapeChar = 'x';
          length = 2;
        } else {
          escapeChar = 'u';
          length = 4;
        }
        
        return '\\' + escapeChar + padLeft(charCode.toString(16).toUpperCase(), '0', length);
      }
      
      function computeReportedPosDetails() {
        function advanceCachedReportedPos() {
          var ch;
          
          for (; cachedReportedPos < reportedPos; cachedReportedPos++) {
            ch = input.charAt(cachedReportedPos);
            if (ch === "\n") {
              if (!cachedReportedPosDetails.seenCR) { cachedReportedPosDetails.line++; }
              cachedReportedPosDetails.column = 1;
              cachedReportedPosDetails.seenCR = false;
            } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
              cachedReportedPosDetails.line++;
              cachedReportedPosDetails.column = 1;
              cachedReportedPosDetails.seenCR = true;
            } else {
              cachedReportedPosDetails.column++;
              cachedReportedPosDetails.seenCR = false;
            }
          }
        }
        
        if (cachedReportedPos !== reportedPos) {
          if (cachedReportedPos > reportedPos) {
            cachedReportedPos = 0;
            cachedReportedPosDetails = { line: 1, column: 1, seenCR: false };
          }
          advanceCachedReportedPos();
        }
        
        return cachedReportedPosDetails;
      }
      
      function offset() {
        return reportedPos;
      }
      
      function line() {
        return computeReportedPosDetails().line;
      }
      
      function column() {
        return computeReportedPosDetails().column;
      }
      
      function matchFailed(failure) {
        if (pos < rightmostFailuresPos) {
          return;
        }
        
        if (pos > rightmostFailuresPos) {
          rightmostFailuresPos = pos;
          rightmostFailuresExpected = [];
        }
        
        rightmostFailuresExpected.push(failure);
      }
      
      function parse_root() {
        var r0, r1, r2, r3, r4, r5, r6, r7, r8, r9;
        
        r1 = pos;
        r2 = pos;
        r4 = pos;
        r3 = parse_multiLineComment();
        if (r3 !== null) {
          reportedPos = r4;
          r3 = (function(c) {return new N('comment', [c]);})(r3);
        }
        if (r3 === null) {
          pos = r4;
        }
        r3 = r3 !== null ? r3 : "";
        if (r3 !== null) {
          r4 = parse__();
          if (r4 !== null) {
            r6 = pos;
            r7 = pos;
            r8 = parse_rootRules();
            if (r8 !== null) {
              r9 = parse__();
              if (r9 !== null) {
                r5 = [r8, r9];
              } else {
                r5 = null;
                pos = r7;
              }
            } else {
              r5 = null;
              pos = r7;
            }
            if (r5 !== null) {
              reportedPos = r6;
              r5 = (function(r) {return r;})(r8);
            }
            if (r5 === null) {
              pos = r6;
            }
            r5 = r5 !== null ? r5 : "";
            if (r5 !== null) {
              r0 = [r3, r4, r5];
            } else {
              r0 = null;
              pos = r2;
            }
          } else {
            r0 = null;
            pos = r2;
          }
        } else {
          r0 = null;
          pos = r2;
        }
        if (r0 !== null) {
          reportedPos = r1;
          r0 = (function(comment, rules) {
        		if (!rules) rules = [];
        		if (comment) rules.unshift(comment);
        		return new N('root', rules);
        	})(r3, r5);
        }
        if (r0 === null) {
          pos = r1;
        }
        return r0;
      }
      
      function parse_rootRules() {
        var r0, r1, r2, r3, r4, r5, r6, r7, r8, r9;
        
        r1 = pos;
        r2 = pos;
        r3 = parse_rootRule();
        if (r3 !== null) {
          r4 = [];
          r6 = pos;
          r7 = pos;
          r8 = parse__();
          if (r8 !== null) {
            r9 = parse_rootRule();
            if (r9 !== null) {
              r5 = [r8, r9];
            } else {
              r5 = null;
              pos = r7;
            }
          } else {
            r5 = null;
            pos = r7;
          }
          if (r5 !== null) {
            reportedPos = r6;
            r5 = (function(r) {return r;})(r9);
          }
          if (r5 === null) {
            pos = r6;
          }
          while (r5 !== null) {
            r4.push(r5);
            r6 = pos;
            r7 = pos;
            r8 = parse__();
            if (r8 !== null) {
              r9 = parse_rootRule();
              if (r9 !== null) {
                r5 = [r8, r9];
              } else {
                r5 = null;
                pos = r7;
              }
            } else {
              r5 = null;
              pos = r7;
            }
            if (r5 !== null) {
              reportedPos = r6;
              r5 = (function(r) {return r;})(r9);
            }
            if (r5 === null) {
              pos = r6;
            }
          }
          if (r4 !== null) {
            r0 = [r3, r4];
          } else {
            r0 = null;
            pos = r2;
          }
        } else {
          r0 = null;
          pos = r2;
        }
        if (r0 !== null) {
          reportedPos = r1;
          r0 = (function(first, rest) {
        		rest.unshift(first);
        		return rest;
        	})(r3, r4);
        }
        if (r0 === null) {
          pos = r1;
        }
        return r0;
      }
      
      function parse_rootRule() {
        var r0;
        
        r0 = parse_ruleset();
        if (r0 === null) {
          r0 = parse_assignment();
          if (r0 === null) {
            r0 = parse_media();
            if (r0 === null) {
              r0 = parse_void();
              if (r0 === null) {
                r0 = parse_block();
                if (r0 === null) {
                  r0 = parse_import();
                  if (r0 === null) {
                    r0 = parse_if();
                    if (r0 === null) {
                      r0 = parse_for();
                      if (r0 === null) {
                        r0 = parse_mixin();
                        if (r0 === null) {
                          r0 = parse_keyframes();
                          if (r0 === null) {
                            r0 = parse_fontFace();
                            if (r0 === null) {
                              r0 = parse_charset();
                            }
                          }
                        }
                      }
                    }
                  }
                }
              }
            }
          }
        }
        return r0;
      }
      
      function parse_ruleset() {
        var r0, r1, r2, r3, r4, r5;
        
        r1 = pos;
        r2 = pos;
        r3 = parse_selectorList();
        if (r3 !== null) {
          r4 = parse__();
          if (r4 !== null) {
            r5 = parse_ruleList();
            if (r5 !== null) {
              r0 = [r3, r4, r5];
            } else {
              r0 = null;
              pos = r2;
            }
          } else {
            r0 = null;
            pos = r2;
          }
        } else {
          r0 = null;
          pos = r2;
        }
        if (r0 !== null) {
          reportedPos = r1;
          r0 = (function(selectorList, ruleList) {
        		return new N('ruleset', [selectorList, ruleList]);
        	})(r3, r5);
        }
        if (r0 === null) {
          pos = r1;
        }
        return r0;
      }
      
      function parse_selectorList() {
        var r0, r1, r2, r3, r4, r5, r6, r7, r8, r9, r10, r11;
        
        r1 = pos;
        r2 = pos;
        r3 = parse_selector();
        if (r3 !== null) {
          r4 = [];
          r6 = pos;
          r7 = pos;
          r8 = parse__();
          if (r8 !== null) {
            if (input.charCodeAt(pos) === 44) {
              r9 = ",";
              pos++;
            } else {
              r9 = null;
              if (reportFailures === 0) {
                matchFailed("\",\"");
              }
            }
            if (r9 !== null) {
              r10 = parse__();
              if (r10 !== null) {
                r11 = parse_selector();
                if (r11 !== null) {
                  r5 = [r8, r9, r10, r11];
                } else {
                  r5 = null;
                  pos = r7;
                }
              } else {
                r5 = null;
                pos = r7;
              }
            } else {
              r5 = null;
              pos = r7;
            }
          } else {
            r5 = null;
            pos = r7;
          }
          if (r5 !== null) {
            reportedPos = r6;
            r5 = (function(s) {return s;})(r11);
          }
          if (r5 === null) {
            pos = r6;
          }
          while (r5 !== null) {
            r4.push(r5);
            r6 = pos;
            r7 = pos;
            r8 = parse__();
            if (r8 !== null) {
              if (input.charCodeAt(pos) === 44) {
                r9 = ",";
                pos++;
              } else {
                r9 = null;
                if (reportFailures === 0) {
                  matchFailed("\",\"");
                }
              }
              if (r9 !== null) {
                r10 = parse__();
                if (r10 !== null) {
                  r11 = parse_selector();
                  if (r11 !== null) {
                    r5 = [r8, r9, r10, r11];
                  } else {
                    r5 = null;
                    pos = r7;
                  }
                } else {
                  r5 = null;
                  pos = r7;
                }
              } else {
                r5 = null;
                pos = r7;
              }
            } else {
              r5 = null;
              pos = r7;
            }
            if (r5 !== null) {
              reportedPos = r6;
              r5 = (function(s) {return s;})(r11);
            }
            if (r5 === null) {
              pos = r6;
            }
          }
          if (r4 !== null) {
            r0 = [r3, r4];
          } else {
            r0 = null;
            pos = r2;
          }
        } else {
          r0 = null;
          pos = r2;
        }
        if (r0 !== null) {
          reportedPos = r1;
          r0 = (function(first, rest) {
        		rest.unshift(first);
        		return new N('selectorList', rest);
        	})(r3, r4);
        }
        if (r0 === null) {
          pos = r1;
        }
        return r0;
      }
      
      function parse_selector() {
        var r0, r1, r2, r3, r4, r5, r6, r7;
        
        r1 = pos;
        r2 = pos;
        r4 = pos;
        r5 = pos;
        r6 = parse_nonSpaceCombinator();
        if (r6 !== null) {
          r7 = parse__();
          if (r7 !== null) {
            r3 = [r6, r7];
          } else {
            r3 = null;
            pos = r5;
          }
        } else {
          r3 = null;
          pos = r5;
        }
        if (r3 !== null) {
          reportedPos = r4;
          r3 = (function(c) {return c;})(r6);
        }
        if (r3 === null) {
          pos = r4;
        }
        r3 = r3 !== null ? r3 : "";
        if (r3 !== null) {
          r4 = parse_compoundSelector();
          if (r4 !== null) {
            r0 = [r3, r4];
          } else {
            r0 = null;
            pos = r2;
          }
        } else {
          r0 = null;
          pos = r2;
        }
        if (r0 !== null) {
          reportedPos = r1;
          r0 = (function(combinator, compoundSelector) {
        		if (combinator) compoundSelector.unshift(combinator);
        		return new N('selector', compoundSelector);
        	})(r3, r4);
        }
        if (r0 === null) {
          pos = r1;
        }
        return r0;
      }
      
      function parse_compoundSelector() {
        var r0, r1, r2, r3, r4, r5, r6, r7, r8, r9;
        
        r1 = pos;
        r2 = pos;
        r3 = parse_simpleSelector();
        if (r3 !== null) {
          r4 = [];
          r6 = pos;
          r7 = pos;
          r8 = parse_combinator();
          if (r8 !== null) {
            r9 = parse_simpleSelector();
            if (r9 !== null) {
              r5 = [r8, r9];
            } else {
              r5 = null;
              pos = r7;
            }
          } else {
            r5 = null;
            pos = r7;
          }
          if (r5 !== null) {
            reportedPos = r6;
            r5 = (function(c, s) {s.unshift(c); return s;})(r8, r9);
          }
          if (r5 === null) {
            pos = r6;
          }
          while (r5 !== null) {
            r4.push(r5);
            r6 = pos;
            r7 = pos;
            r8 = parse_combinator();
            if (r8 !== null) {
              r9 = parse_simpleSelector();
              if (r9 !== null) {
                r5 = [r8, r9];
              } else {
                r5 = null;
                pos = r7;
              }
            } else {
              r5 = null;
              pos = r7;
            }
            if (r5 !== null) {
              reportedPos = r6;
              r5 = (function(c, s) {s.unshift(c); return s;})(r8, r9);
            }
            if (r5 === null) {
              pos = r6;
            }
          }
          if (r4 !== null) {
            r0 = [r3, r4];
          } else {
            r0 = null;
            pos = r2;
          }
        } else {
          r0 = null;
          pos = r2;
        }
        if (r0 !== null) {
          reportedPos = r1;
          r0 = (function(first, rest) {
        		if (rest.length) rest = first.concat(_.flatten(rest));
        		else rest = first;
        
        		return rest;
        	})(r3, r4);
        }
        if (r0 === null) {
          pos = r1;
        }
        return r0;
      }
      
      function parse_combinator() {
        var r0, r1, r2, r3, r4, r5;
        
        r1 = pos;
        r2 = pos;
        r3 = parse__();
        if (r3 !== null) {
          r4 = parse_nonSpaceCombinator();
          if (r4 !== null) {
            r5 = parse__();
            if (r5 !== null) {
              r0 = [r3, r4, r5];
            } else {
              r0 = null;
              pos = r2;
            }
          } else {
            r0 = null;
            pos = r2;
          }
        } else {
          r0 = null;
          pos = r2;
        }
        if (r0 !== null) {
          reportedPos = r1;
          r0 = (function(nonSpaceCombinator) {
        		return nonSpaceCombinator;
        	})(r4);
        }
        if (r0 === null) {
          pos = r1;
        }
        if (r0 === null) {
          r0 = parse_spaceCombinator();
        }
        return r0;
      }
      
      function parse_nonSpaceCombinator() {
        var r0, r1;
        
        r1 = pos;
        if (/^[>+~]/.test(input.charAt(pos))) {
          r0 = input.charAt(pos);
          pos++;
        } else {
          r0 = null;
          if (reportFailures === 0) {
            matchFailed("[>+~]");
          }
        }
        if (r0 !== null) {
          reportedPos = r1;
          r0 = (function(value) {
        		return new N('combinator', [value]);
        	})(r0);
        }
        if (r0 === null) {
          pos = r1;
        }
        return r0;
      }
      
      function parse_spaceCombinator() {
        var r0, r1;
        
        r1 = pos;
        r0 = parse_s();
        if (r0 !== null) {
          reportedPos = r1;
          r0 = (function() {
        		return new N('combinator', [' ']);
        	})();
        }
        if (r0 === null) {
          pos = r1;
        }
        return r0;
      }
      
      function parse_simpleSelector() {
        var r0, r1, r2, r3, r4, r5;
        
        r1 = pos;
        r2 = pos;
        r3 = parse_baseSelector();
        if (r3 === null) {
          r3 = parse_suffixSelector();
        }
        if (r3 !== null) {
          r4 = [];
          r5 = parse_suffixSelector();
          while (r5 !== null) {
            r4.push(r5);
            r5 = parse_suffixSelector();
          }
          if (r4 !== null) {
            r0 = [r3, r4];
          } else {
            r0 = null;
            pos = r2;
          }
        } else {
          r0 = null;
          pos = r2;
        }
        if (r0 !== null) {
          reportedPos = r1;
          r0 = (function(first, rest) {
        		rest.unshift(first);
        		return rest;
        	})(r3, r4);
        }
        if (r0 === null) {
          pos = r1;
        }
        return r0;
      }
      
      function parse_baseSelector() {
        var r0;
        
        r0 = parse_selectorInterpolation();
        if (r0 === null) {
          r0 = parse_typeSelector();
          if (r0 === null) {
            r0 = parse_universalSelector();
            if (r0 === null) {
              r0 = parse_ampersandSelector();
            }
          }
        }
        return r0;
      }
      
      function parse_suffixSelector() {
        var r0;
        
        r0 = parse_hashSelector();
        if (r0 === null) {
          r0 = parse_classSelector();
          if (r0 === null) {
            r0 = parse_attributeSelector();
            if (r0 === null) {
              r0 = parse_negationSelector();
              if (r0 === null) {
                r0 = parse_pseudoSelector();
              }
            }
          }
        }
        return r0;
      }
      
      function parse_selectorInterpolation() {
        var r0, r1;
        
        r1 = pos;
        r0 = parse_variable();
        if (r0 !== null) {
          reportedPos = r1;
          r0 = (function(value) {
        		return new N('selectorInterpolation', [value]);
        	})(r0);
        }
        if (r0 === null) {
          pos = r1;
        }
        return r0;
      }
      
      function parse_typeSelector() {
        var r0, r1;
        
        r1 = pos;
        r0 = parse_identifier();
        if (r0 !== null) {
          reportedPos = r1;
          r0 = (function(value) {
        		return new N('typeSelector', [value]);
        	})(r0);
        }
        if (r0 === null) {
          pos = r1;
        }
        return r0;
      }
      
      function parse_universalSelector() {
        var r0, r1;
        
        r1 = pos;
        if (input.charCodeAt(pos) === 42) {
          r0 = "*";
          pos++;
        } else {
          r0 = null;
          if (reportFailures === 0) {
            matchFailed("\"*\"");
          }
        }
        if (r0 !== null) {
          reportedPos = r1;
          r0 = (function() {
        		return new N('universalSelector');
        	})();
        }
        if (r0 === null) {
          pos = r1;
        }
        return r0;
      }
      
      function parse_ampersandSelector() {
        var r0, r1, r2, r3, r4;
        
        r1 = pos;
        r2 = pos;
        if (input.charCodeAt(pos) === 38) {
          r3 = "&";
          pos++;
        } else {
          r3 = null;
          if (reportFailures === 0) {
            matchFailed("\"&\"");
          }
        }
        if (r3 !== null) {
          r4 = parse_identifier();
          r4 = r4 !== null ? r4 : "";
